--- a/group project/README
+++ b/group project/README
@@ -1,1 +1,14 @@
 11.9.2020 create the repository
+
+
+1. - Program spawns daemon(Fubin)
+2. - Server setup and binding to appropriate ports (for ipv4 and ipv6)(Fubin)
+3. - Request validation(Edward)
+4. - Parse headers(Edward)
+5. (keep track of timestamp for If-Modified-Since)(Fubin)
+6. - CGI forking and executing(Edward)
+7. - CGI sending information back in response(Edward)
+8. - Logging file(Fubin)
+9. - user directory handling(Edward)
+10. - directory index generation(Fubin)
+11. - regular file serving(Fubin)
