--- a/group project/README
+++ b/group project/README
@@ -6,15 +6,10 @@
 3. - Request validation(Edward)(done)
 4. - Parse headers(Edward)(done)
 5. (keep track of timestamp for If-Modified-Since)(Fubin)(done)
-6. - CGI forking and executing(Edward)
-7. - CGI sending information back in response(Edward)
+6. - CGI forking and executing(Edward)(done)
+7. - CGI sending information back in response(Edward)(done)
 8. - Logging file(Fubin)(done)
 9. - user directory handling(Edward)(done)
 10. - directory index generation(Fubin)(done)
 11. - regular file serving(Fubin)(done)
 
-All Fubin's part has done. 
-
-For Edward, I have tried to connect him several times, use the Slacks and emails, and asked him to submit his part of code. But he did not submit. 
-
-This code can not deal with the cgi.
